# twitter_scripts

./: GetFollowers.sh  README.md  follow.py  followers.txt  following.txt  get_new_flist.py  main.py  not_following_back.py  not_following_yet.py  potential_followers.py  pyproject.toml  test.sh
tweet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
