[tool.poetry]
name = "tweet"
version = "0.1.0"
description = ""
authors = ["Lamar Marshall <lamarmarshall75@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twitter_scraper = "^0.4.2"
twint = "^2.1.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
